instructions.Instructions.scala.error
Erreur de compilation :
Instructions:2: error: not found: value baisserBrosse
baisserBrosse()
^Instructions:3: error: not found: value leverBrosse
leverBrosse() 
^